src/objects/dwp_kitv__Visit_Contact__c.object
<CustomObject>
    <description>Object to relate a contact with a visit. These records will appear on related list of Visit object.</description>
    <fields>
        <fullName>contact_prof_position_type__c</fullName>
        <formula>TEXT(dwp_kitv__contact_id__r.prof_position_type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__contact_called_type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determinate if this contact has been arranged.</description>
        <label>Arranged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__contact_email_desc__c</fullName>
        <description>Retrieve the contact&apos;s email</description>
        <formula>dwp_kitv__contact_id__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__contact_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relation with a contact record.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Visit Contacts</relationshipLabel>
        <relationshipName>Visit_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__contact_phone_desc__c</fullName>
        <description>Retrieves the contact&apos;s phone</description>
        <formula>dwp_kitv__contact_id__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__visit_id__c</fullName>
        <description>Relation with a visit record.</description>
        <label>Visit</label>
        <referenceTo>dwp_kitv__Visit__c</referenceTo>
        <relationshipLabel>Visit Contacts</relationshipLabel>
        <relationshipName>Visit_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Visit Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VC-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Valid_visit_null</fullName>
        <active>true</active>
        <errorConditionFormula>if(ISNEW() ,IF( ISBLANK( dwp_kitv__contact_id__c ) ,true,false),false)</errorConditionFormula>
        <errorDisplayField>dwp_kitv__contact_id__c</errorDisplayField>
        <errorMessage>The contact is null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Visit_is_Active</fullName>
        <active>true</active>
        <description>validate if visit is active</description>
        <errorConditionFormula>IF(ISPICKVAL(dwp_kitv__visit_id__r.dwp_kitv__visit_status_type__c, &apos;06&apos;) , true, false)</errorConditionFormula>
        <errorMessage>Not is possible create the visit, the visit is in status ended</errorMessage>
    </validationRules>
    <validationRules>		 
        <fullName>dwp_kitv__Change_contact</fullName>
        <active>true</active>
        <description>You cannot change the contact.</description>
        <errorConditionFormula>ISCHANGED(  dwp_kitv__contact_id__c )</errorConditionFormula>
        <errorMessage>It is not allowed to change the contact. Please, delete the visit contact.</errorMessage>
    </validationRules>
</CustomObject>